# firefly-test

./: .gitignore  Cargo.toml  README.md  Taskfile.yml  pyproject.toml  tmp.py
python/firefly_test/: __init__.py  _app.py  _cli.py  _color.py  _frame.py  _input.py  _runner.py  _rust.pyi
src/: color.rs  display.rs  lib.rs  runner.rs  runtime.rs
tests/: test_color.py  test_frame.py  test_integration.py
