[package]
name = "firefly-test"
version = "0.1.2"
edition = "2021"

[lib]
name = "firefly_test"
crate-type = ["cdylib"]

[dependencies]
firefly-hal = { path = "../firefly-hal" }
firefly-runtime = { path = "../firefly/firefly-runtime" }

directories = "6.0.0"
embedded-graphics = "0.8.1"
pyo3 = "0.27.1"
heapless = "0.9.2"
