[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "firefly-test"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
lint = ["ruff", "mypy"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "firefly_test._rust"

[tool.pytest.ini_options]
addopts = [
    "--cov=python/firefly_test",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=70",
    "--cov-report=term-missing:skip-covered",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING",
    "    pass",
    "except ImportError:",
]

[tool.coverage.run]
branch = true

[tool.ruff]
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "N",
    "B",
    "I",
    "COM",
    "ISC",
    "PIE",
    "Q",
    "SIM",
    "PTH",
    "PL",
    "RUF",
]
ignore = [
    "PLR2004", # allow hardcoded constants
    "SIM117",  # allow nested with
    "SIM105",  # allow try-except-pass
    "PIE790",  # allow unnecessary pass statements
    "PLW2901", # allow overriding loop variable
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.mypy]
files = ["."]
python_version = "3.8"
ignore_missing_imports = true
strict = true
